--- a/misc/extras.html
+++ b/misc/extras.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <a href="../index.html"><h1>Extras Page</h1></a>
-    <p>This page is all about the miscellaneous links, But you may also be interested in Links or imagrs</p>
+    <p>This page is all about the miscellaneous links, But you may also be interested in Links or images</p>
 </body>
 </html>
